--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "mobilestop-practica",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-css": "node-sass --include-path scss scss/styles.scss css/estilos.css",
-
     "watch-css": "nodemon -e scss -x \"npm  run build-css\""
   },
   "author": "",
@@ -14,5 +12,6 @@
   "devDependencies": {
     "node-sass": "^8.0.0",
     "nodemon": "^2.0.22"
-  }
+  },
+  "description": ""
 }
